Revert SCAN4NET-714 and set version to 10.4.1 (#2857)